snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__far__farextract.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/far/farextract.cc",
    ),
    start_line: 1,
    end_line: 46,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 2,
            exit_sum: 2,
            total_space_functions: 0,
            exit_min: 2,
            exit_max: 2,
        },
        cognitive: Stats {
            structural: 3,
            structural_sum: 3,
            structural_min: 3,
            structural_max: 3,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 4.0,
            cyclomatic: 4.0,
            n: 1,
            cyclomatic_max: 4.0,
            cyclomatic_min: 4.0,
        },
        halstead: Stats {
            u_operators: 18,
            operators: 108,
            u_operands: 49,
            operands: 85,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 46,
                unit: true,
                sloc_min: 46,
                sloc_max: 46,
            },
            ploc: Ploc {
                lines: {
                    40,
                    37,
                    34,
                    31,
                    25,
                    22,
                    19,
                    16,
                    13,
                    10,
                    44,
                    41,
                    38,
                    35,
                    29,
                    26,
                    23,
                    20,
                    17,
                    14,
                    8,
                    5,
                    45,
                    42,
                    33,
                    30,
                    27,
                    18,
                    15,
                    12,
                    9,
                    6,
                },
                ploc_min: 32,
                ploc_max: 32,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 23,
                lloc_min: 23,
                lloc_max: 23,
            },
            space_count: 1,
            blank_min: 10,
            blank_max: 10,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 193.0,
            halstead_vocabulary: 67.0,
            halstead_volume: 1170.75521375835,
            cyclomatic: 4.0,
            sloc: 46.0,
            comments_percentage: 0.08695652173913043,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
